--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,24 +5,24 @@
 @tailwind utilities;
 
 /* Hide the default scrollbar */
-body::-webkit-scrollbar {
-    width: 20px;
+::-webkit-scrollbar {
+    width: 16px;
 }
     
 /* Track */
-body::-webkit-scrollbar-track {
-    display: none;
+::-webkit-scrollbar-track {
+   display: none;
     
 }
 
 /* Handle */
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #1E363F;
     border-radius: 16px 0px 0px 16px;
 }
 
 /* Handle on hover */
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background: #2C6173;
 }
 
